# PlannerPars

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/core/: config.py  s3.py
app/router/: group_router.py
app/services/: pars_aag.py  pars_aask.py  starting_parsers.py
