[tool.poetry]
name = "planner-pars"
version = "0.1.0"
description = ""
authors = ["Roman <roman@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
boto3 = "^1.34.0"
requests = "^2.31.0"
apscheduler = "^3.10.4"
pdfplumber = "^0.10.3"
lxml = "^5.1.0"
pillow = "^10.2.0"
python-dotenv = "^1.1.1"
fastapi = "^0.117.1"
uvicorn = "^0.37.0"
openpyxl = "^3.1.5"
pdf2image = "^1.17.0"
xlrd = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"